--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@electron/rebuild": "^4.0.2",
     "@eslint/js": "^9.39.1",
     "@types/better-sqlite3": "^7.6.13",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
@@ -91,6 +92,7 @@
     "drizzle-orm": "^0.29.3",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.6.2",
+    "dompurify": "^3.2.2",
     "i18next": "^25.7.2",
     "lucide-react": "^0.560.0",
     "react": "^18.2.0",
